# nostrnotify

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  feed.rs  main.rs  notification.rs
