[package]
name = "nostrnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = "0.22.0"
reqwest = "0.11.18"
rss = "2.0.4"
tokio = { version = "1.28.2", features=["full"] }
serde = { version = "1.0.163", features = ["derive"] }
confy = "0.5.1"
clap = { version = "4.3.1", features = ["derive"] }
time = "0.3.21"
dialoguer = "0.10.4"
